[project]
name = "ray"
version = "3.0.0"
description = "Ray: A distributed execution framework"
authors = [
    {name = "Ray Team", email = "ray@example.com"}
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click >=7.0",
    "pyyaml",
    "prometheus_client >=0.7.1",
    "aiohttp >=3.7.0",
    "aiohttp_cors",
    "grpcio >=1.32.0",
    "protobuf >=3.15.3",
    "numpy >=1.19.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Rest of your existing configuration...
[tool.ruff]
line-length = 88
extend-exclude = [
    "python/ray/thirdparty_files/",
    "python/ray/_private/thirdparty/",
    "python/ray/_private/runtime_env/agent/thirdparty_files/",
    "python/build/",
    "python/ray/workflow/tests/mock_server.py",
    "python/ray/serve/tests/test_config_files/syntax_error.py",
]

[tool.ruff.lint]
extend-select = ["I", "B", "Q", "C4", "W"]
ignore = [
    "B003",
    "B005",
    "B007",
    "B008",
    "B011",
    "B012",
    "B015",
    "B017",
    "B028",
    "C408",
    "C417",
    "E741",
    "B023",
    "B024",
    "B026",
    "B027",
    "B904",
    "C419",
    "I001",
]

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.lint.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "afterray"]
known-local-folder = ["ray"]
known-third-party = ["grpc"]

[tool.ruff.lint.isort.sections]
afterray = ["psutil", "setproctitle"]

[tool.ruff.lint.per-file-ignores]
"doc/*" = ["I"]
"python/ray/__init__.py" = ["I"]
"python/ray/setup-dev.py" = ["I"]
"python/ray/cloudpickle/*" = ["I"]
"python/ray/dag/*.py" = ["I"]
"ci/*" = ["I"]
"python/ray/includes/*" = ["I"]
"python/ray/internal/*" = ["I"]
"python/ray/ray_operator/*" = ["I"]
"python/ray/scripts/*" = ["I"]
"python/ray/serve/generated/serve_pb2.py" = ["I"]
"python/ray/streaming/*" = ["I"]
"python/ray/tests/*" = ["I"]
"python/ray/util/*" = ["I"]
"python/ray/workers/*" = ["I"]
"python/ray/workflow/*" = ["I"]
"rllib/*" = ["I"]
"release/*" = ["I"]
"python/ray/tune/__init__.py" = ["I"]